<resources>
    <string name="app_name">GeekbrainsInstagram</string>

    <string name="appbar_home_title">Home</string>
    <string name="appbar_search_title">Online search</string>
    <string name="appbar_camera_title">Camera photos</string>
    <string name="appbar_favorites_title">Favorites</string>
    <string name="appbar_profile_title">Profile</string>
    <string name="appbar_app_theme_title">Color theme</string>
    <string name="appbar_app_photo_details_title">Photo</string>

    <string name="drawer_title">Instagram</string>
    <string name="drawer_subtitle">geekbrains.ru</string>

    <string-array name="home_tabs">
        <item>Database</item>
        <item>Network</item>
        <item>Camera</item>
    </string-array>

    <string name="nav_main_title">Main</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_search_item">Search photos online</string>
    <string name="nav_camera_item">Camera photos</string>
    <string name="nav_favorites_item">Favorites photos</string>
    <string name="nav_app_theme_item">Application color theme</string>
    <string name="nav_search_tab_item">Search</string>
    <string name="nav_camera_tab_item">Camera</string>
    <string name="nav_favorites_tab_item">Favorites</string>

    <string name="delete_from_favorites_action">Delete from favorites</string>
    <string name="delete_from_device_action">Delete from device</string>

    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <string name="btn_red_theme">Red Theme</string>
    <string name="btn_blue_theme">Blue Theme</string>
    <string name="btn_green_theme">Green Theme</string>

    <string name="photo_successfully_added_message">Photo successfully added</string>
    <string name="photo_successfully_deleted_message">Photo successfully deleted</string>
    <string name="photo_successfully_deleted_from_favorites_message">Photo successfully deleted from favorites</string>
    <string name="photo_successfully_deleted_from_device_message">Photo successfully deleted from device</string>
    <string name="error_camera_open_message">Cannot open the camera</string>
    <string name="error_add_photo_to_favorites_message">Cannot add photo to favorites</string>
    <string name="error_delete_photo_from_favorites_message">Cannot delete photo from favorites</string>
    <string name="error_delete_photo_from_device_message">Cannot delete photo from device</string>
    <string name="error_delete_photo_message">Cannot delete photo</string>
    <string name="error_load_photo_message">Cannot load photo</string>

    <string name="delete_photo_dialog_title">Do you really want to delete a photo?</string>
    <string name="delete_photo_dialog_delete">Delete</string>
    <string name="delete_photo_dialog_cancel">Cancel</string>

    <string name="gallery_photo_description">Photo</string>
    <string name="toolbar_photo_description">Toolbar</string>
</resources>
