<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_main_title">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/nav_search_item" />

            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_photo_camera_black_24dp"
                android:title="@string/nav_camera_item" />

            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_star_filled_24dp"
                android:title="@string/nav_favorites_item" />
        </menu>
    </item>

    <item android:title="@string/nav_settings_title">
        <menu>
            <item
                android:id="@+id/nav_app_theme"
                android:icon="@drawable/ic_theme_chooser_black_24dp"
                android:title="@string/nav_app_theme_item" />
        </menu>
    </item>
</menu>